# Particules

./: .clang-format  .codacy.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md  lgtm.yml
src/: CMakeLists.txt  burningSystem.cpp  burningSystem.hpp  collision.cpp  collision.hpp  collisionCleanupSystem.cpp  collisionCleanupSystem.hpp  collisionFinderSystem.cpp  collisionFinderSystem.hpp  collisionManifoldSystem.cpp  collisionManifoldSystem.hpp  collisionResolverSystem.cpp  collisionResolverSystem.hpp  collisionSolver.cpp  collisionSolver.hpp  collisionSystem.cpp  collisionSystem.hpp  combustionSystem.cpp  combustionSystem.hpp  components.hpp  definitions.hpp  engine.cpp  engine.hpp  entityCleanupSystem.cpp  entityCleanupSystem.hpp  findSleepingParticles.cpp  gravitySystem.cpp  gravitySystem.hpp  ignitionSystem.cpp  ignitionSystem.hpp  main.cpp  movementDetectorSystem.cpp  movementDetectorSystem.hpp  particle.cpp  particle.hpp  particleFactory.cpp  particleFactory.hpp  physics.cpp  physics.hpp  quadTree.hpp  (+9 more)
tests/: CMakeLists.txt
